# multifuck

./: Cargo.toml  README.md  base  gui-input.toml  input  repetitive  threading  threading2  watchcargo
examples/: binary-tree-move  communicating-threads  delay-fork  diverge-threads  enums  fast-dupe  fast-move  fast-move-erroneous  if-else  input  lock-fork  lock-fork-2  lock-fork.cast  mult3-5-15  octopus  printers  puffer  simple-n-spawner  slow-move
src/: logs.rs  main.rs
